<resources>
    <string name="app_name">Covid-19</string>

    <string name="tab_totals">Totals</string>
    <string name="tab_countries">Countries</string>
    <string name="tab_maps">Maps</string>

    <string name="confirmed">Confirmed</string>
    <string name="actived">Active</string>
    <string name="recovered">Recovered</string>
    <string name="critical">Critical</string>
    <string name="deaths">Deaths</string>
    <string name="data_latets">Last Update:</string>

    <string name="url_flag">https://flagpedia.net/data/flags/normal/%1$s.png</string>
    <string name="url_questions_oms">https://www.who.int/emergencies/diseases/novel-coronavirus-2019/question-and-answers-hub</string>
    <string name="rate">rate:</string>
    <string name="prevention">Prevention</string>
    <string name="check_who_guidelines">Check WHO Guidelines</string>
    <string name="world_update">World Update</string>
    <string name="most_infected">Most Confirmed</string>
</resources>
