<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:cardCornerRadius="@dimen/dimen_10">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/dimen_250"
        android:layout_height="wrap_content"
        android:background="@color/background">

        <TextView
            android:id="@+id/countryName"
            android:layout_width="@dimen/empty_size"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4"
            android:layout_marginTop="@dimen/dimen_4"
            android:layout_marginEnd="@dimen/dimen_4"
            android:layout_marginBottom="@dimen/dimen_4"
            android:text="@string/app_name"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toTopOf="@+id/countryTotal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/countryTotal"
            android:layout_width="@dimen/empty_size"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4"
            android:layout_marginTop="@dimen/dimen_4"
            android:layout_marginEnd="@dimen/dimen_4"
            android:text="@string/confirmed"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintEnd_toStartOf="@+id/countryTotalNumber"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryName" />

        <TextView
            android:id="@+id/countryTotalNumber"
            android:layout_width="@dimen/empty_size"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_4"
            android:layout_marginEnd="@dimen/dimen_4"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/countryTotal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryName"
            tools:text="@string/app_name" />

        <ProgressBar
            android:id="@+id/colorBarTotal"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/empty_size"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4"
            android:layout_marginTop="@dimen/dimen_4"
            android:layout_marginEnd="@dimen/dimen_4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryTotal" />

        <TextView
            android:id="@+id/countryRecovered"
            android:layout_width="@dimen/empty_size"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4"
            android:layout_marginTop="@dimen/dimen_4"
            android:layout_marginEnd="@dimen/dimen_4"
            android:text="@string/recovered"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintEnd_toStartOf="@+id/countryRecoveredNumber"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colorBarActive" />

        <TextView
            android:id="@+id/countryRecoveredNumber"
            android:layout_width="@dimen/empty_size"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_4"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/countryRecovered"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colorBarActive"
            tools:text="@string/app_name" />

        <ProgressBar
            android:id="@+id/colorBarRecovered"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/empty_size"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4"
            android:layout_marginTop="@dimen/dimen_4"
            android:layout_marginEnd="@dimen/dimen_4"
            android:backgroundTint="@color/recovered"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryRecovered" />

        <TextView
            android:id="@+id/countryDeath"
            android:layout_width="@dimen/empty_size"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4"
            android:layout_marginTop="@dimen/dimen_4"
            android:layout_marginEnd="@dimen/dimen_4"
            android:text="@string/deaths"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintEnd_toStartOf="@+id/countryDeathNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colorBarRecovered" />

        <TextView
            android:id="@+id/countryDeathNumber"
            android:layout_width="@dimen/empty_size"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_4"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/countryDeath"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/countryDeath"
            tools:text="@string/app_name" />

        <ProgressBar
            android:id="@+id/colorBarDeath"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/empty_size"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4"
            android:layout_marginTop="@dimen/dimen_4"
            android:layout_marginEnd="@dimen/dimen_4"
            android:layout_marginBottom="@dimen/dimen_4"
            android:backgroundTint="@color/deaths"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryDeath" />

        <TextView
            android:id="@+id/countryActive"
            android:layout_width="@dimen/empty_size"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4"
            android:layout_marginTop="@dimen/dimen_4"
            android:layout_marginEnd="@dimen/dimen_4"
            android:text="@string/actived"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_16"
            app:layout_constraintEnd_toStartOf="@+id/countryActiveNumber"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/colorBarTotal" />

        <TextView
            android:id="@+id/countryActiveNumber"
            android:layout_width="@dimen/empty_size"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_4"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_20"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/countryActive"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/countryActive"
            tools:text="@string/app_name" />

        <ProgressBar
            android:id="@+id/colorBarActive"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="@dimen/empty_size"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4"
            android:layout_marginTop="@dimen/dimen_4"
            android:layout_marginEnd="@dimen/dimen_4"
            android:backgroundTint="@color/active"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/countryActive" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
