<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:clickable="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">

        <ImageView
            android:id="@+id/flag"
            android:layout_width="@dimen/dimen_56"
            android:layout_height="@dimen/dimen_56"
            android:layout_marginStart="@dimen/default_size"
            android:layout_marginTop="@dimen/dimen_24"
            android:src="@drawable/banner_background"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_size"
            android:layout_marginTop="@dimen/small_size"
            android:layout_marginBottom="@dimen/small_size"
            android:textColor="@color/text_color_label"
            app:layout_constraintBottom_toBottomOf="@+id/flag"
            app:layout_constraintStart_toEndOf="@+id/flag"
            app:layout_constraintTop_toTopOf="@+id/flag"
            tools:text="@string/app_name" />

        <include
            android:id="@+id/horizontalBarChartShimmer"
            layout="@layout/chart_total_shimmer"
            android:layout_width="@dimen/empty_size"
            android:layout_height="@dimen/dimen_150"
            android:layout_marginStart="@dimen/dimen_4"
            android:layout_marginTop="@dimen/default_size"
            android:layout_marginEnd="@dimen/dimen_4"
            android:layout_marginBottom="@dimen/default_size"
            app:layout_constraintBottom_toTopOf="@+id/countryTotalContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.0" />

        <com.github.mikephil.charting.charts.HorizontalBarChart
            android:id="@+id/horizontalBarChart"
            android:layout_width="@dimen/empty_size"
            android:layout_height="@dimen/dimen_150"
            android:layout_marginStart="@dimen/dimen_4"
            android:layout_marginTop="@dimen/default_size"
            android:layout_marginEnd="@dimen/dimen_4"
            android:visibility="gone"
            android:layout_marginBottom="@dimen/default_size"
            app:layout_constraintBottom_toTopOf="@+id/countryTotalContainer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.0" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/countryTotalContainer"
            android:layout_width="@dimen/empty_size"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_size"
            android:layout_marginEnd="@dimen/default_size"
            android:layout_marginBottom="@dimen/default_size"
            app:layout_constraintBottom_toTopOf="@+id/bannerTips"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" >

            <include
                android:id="@+id/totalListShimmer"
                layout="@layout/country_total_list_shimmer"
                android:layout_width="@dimen/empty_size"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvCountry"
                android:layout_width="@dimen/empty_size"
                android:layout_height="wrap_content"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/default_size"
            android:layout_height="@dimen/default_size"
            android:layout_marginStart="@dimen/default_size"
            android:layout_marginTop="@dimen/default_size"
            android:src="@drawable/rate_confirmed"
            app:layout_constraintEnd_toStartOf="@+id/confirmedLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flag" />

        <TextView
            android:id="@+id/confirmedLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirmed"
            android:textColor="@color/text_color_label"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/imageView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="@dimen/default_size"
            android:layout_height="@dimen/default_size"
            android:src="@drawable/rate_deaths"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/deathsLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/confirmedLabel"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/deathsLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deaths"
            android:textColor="@color/text_color_label"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/imageView6"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView5"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="@dimen/default_size"
            android:layout_height="@dimen/default_size"
            android:src="@drawable/rate_recovered"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/recoveredLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/deathsLabel"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <TextView
            android:id="@+id/recoveredLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recovered"
            android:textColor="@color/text_color_label"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/imageView7"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView6"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="@dimen/default_size"
            android:layout_height="@dimen/default_size"
            android:src="@drawable/rate_active"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toStartOf="@+id/activeLabel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/recoveredLabel" />

        <TextView
            android:id="@+id/activeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_size"
            android:text="@string/actived"
            android:textColor="@color/text_color_label"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageView7"
            app:layout_constraintTop_toTopOf="@+id/imageView2" />

        <include
            android:id="@+id/bannerTips"
            layout="@layout/banner_tips"
            android:layout_width="@dimen/empty_size"
            android:layout_height="@dimen/dimen_80"
            android:layout_marginStart="@dimen/default_size"
            android:layout_marginEnd="@dimen/default_size"
            android:layout_marginBottom="@dimen/small_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
